--- a/client/public/styles/style.css
+++ b/client/public/styles/style.css
@@ -4700,3 +4700,213 @@ body.layout-3 .main-wrapper {
   background: #6777ef;
   color: #ffffff !important;
 }
+
+/* 6. payslip table */
+.slip-main-container {
+  margin: 10px 12px;
+}
+
+.slip-header-main {
+  background-color: #1e293b;
+  color: white;
+  padding: 20px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.slip-header-main h1 {
+  margin: 0;
+  font-size: 22px;
+}
+
+.slip-header-main h3 {
+  margin: 0;
+  font-size: 18px;
+}
+
+.slip-employee-table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.slip-employee-table tr {
+  border-bottom: 0.5px solid #e0f2fe;
+}
+
+.slip-employee-table td {
+  padding: 4px 0;
+}
+
+.slip-employee-table td:nth-child(1),
+.slip-employee-table td:nth-child(4) {
+  width: 18%;
+  font-weight: bold;
+}
+
+.slip-employee-table td:nth-child(2),
+.slip-employee-table td:nth-child(5) {
+  width: 2%;
+}
+
+.slip-employee-table td:nth-child(3),
+.slip-employee-table td:nth-child(6) {
+  width: 30%;
+}
+
+.slip-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
+}
+
+.slip-section {
+  flex-grow: 1;
+}
+
+/* Left side column */
+.slip-left-section {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 25%;
+  min-width: 280px;
+  flex-grow: 1;
+  gap: 10px;
+}
+
+/* Section Title Styles */
+.income-title {
+  color: #047857;
+  border-top: 2px solid #99f6e4;
+  border-bottom: 1px solid #99f6e4;
+  background-color: #d1fae5;
+  text-align: center;
+  font-weight: 600;
+  font-size: 1.25rem;
+  padding: 8px;
+  margin-bottom: 0;
+}
+
+.contribution-title {
+  color: #0284c7;
+  border-top: 2px solid #73c2f0;
+  border-bottom: 1px solid #73c2f0;
+  background-color: #e0f2fe;
+  text-align: center;
+  font-weight: 600;
+  font-size: 1.25rem;
+  padding: 8px;
+  margin-bottom: 0;
+}
+
+.deduct-title {
+  color: #b91c1c;
+  border-top: 2px solid #fecaca;
+  border-bottom: 1px solid #fecaca;
+  background-color: #fef2f2;
+  text-align: center;
+  font-weight: 600;
+  font-size: 1.25rem;
+  padding: 8px;
+  margin-bottom: 0;
+}
+
+/* Table Styles */
+.slip-table {
+  width: 100%;
+  border-collapse: collapse;
+  font-size: 1rem;
+}
+
+.income-table {
+  border-top: 1px solid #99f6e4;
+  border-bottom: 1px solid #99f6e4;
+}
+
+.contribution-table {
+  border-top: 1px solid #73c2f0;
+  border-bottom: 1px solid #73c2f0;
+}
+
+.deduct-table {
+  border-top: 1px solid #fecaca;
+  border-bottom: 1px solid #fecaca;
+}
+
+.income-sub {
+  color: #047857;
+  border-top: 1px solid #99f6e4;
+  border-bottom: 1px solid #99f6e4;
+  background-color: #d1fae5;
+  font-weight: bold;
+  padding: 4px;
+  text-align: left;
+}
+
+.deduct-sub {
+  color: #b91c1c;
+  border-top: 1px solid #fecaca;
+  border-bottom: 1px solid #fecaca;
+  background-color: #fef2f2;
+  font-weight: bold;
+  padding: 4px;
+  text-align: left;
+}
+
+.totals-salary {
+  display: flex;
+  margin-top: 20px;
+}
+
+.total-income,
+.total-deductions {
+  flex: 1;
+  padding: 10px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.total-income {
+  background-color: #ecfdf5;
+  color: #047857;
+}
+
+.total-deductions {
+  background-color: #fef2f2;
+  color: #b91c1c;
+}
+
+.net-pay {
+  background-color: #1e293b;
+  color: white;
+  margin-top: 20px;
+  padding: 15px;
+  font-weight: bold;
+  font-size: 18px;
+  text-align: center;
+}
+
+.bank-info {
+  font-style: italic;
+  font-size: 12px;
+  margin-top: 10px;
+}
+
+.signature-section {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 50px;
+}
+
+.signature-block {
+  text-align: center;
+}
+
+.signature-label {
+  font-weight: bold;
+}
+
+.signature-line {
+  margin-top: 60px;
+}
